--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
